@@ -330,9 +330,6 @@ decl_stmt|;
 name|boolean
 name|isOverWrite
 decl_stmt|;
-name|FileSystem
-name|fs
-decl_stmt|;
 specifier|public
 name|LoadSemanticAnalyzer
 parameter_list|(
@@ -432,20 +429,17 @@ name|fromPath
 parameter_list|)
 throws|throws
 name|IOException
+throws|,
+name|URISyntaxException
 block|{
-name|Path
-name|p
+name|URI
+name|fromURI
 init|=
 operator|new
 name|Path
 argument_list|(
 name|fromPath
 argument_list|)
-decl_stmt|;
-name|URI
-name|fromURI
-init|=
-name|p
 operator|.
 name|toUri
 argument_list|()
@@ -458,14 +452,31 @@ operator|.
 name|getScheme
 argument_list|()
 decl_stmt|;
-comment|// initialize scheme for 'local' mode
+name|String
+name|fromAuthority
+init|=
+name|fromURI
+operator|.
+name|getAuthority
+argument_list|()
+decl_stmt|;
+name|String
+name|path
+init|=
+name|fromURI
+operator|.
+name|getPath
+argument_list|()
+decl_stmt|;
+comment|// generate absolute path relative to current directory or hdfs home directory
 if|if
 condition|(
-name|StringUtils
+operator|!
+name|path
 operator|.
-name|isEmpty
+name|startsWith
 argument_list|(
-name|fromScheme
+literal|"/"
 argument_list|)
 condition|)
 block|{
@@ -474,19 +485,7 @@ condition|(
 name|isLocal
 condition|)
 block|{
-if|if
-condition|(
-operator|!
-name|fromPath
-operator|.
-name|startsWith
-argument_list|(
-literal|"/"
-argument_list|)
-condition|)
-block|{
-comment|// generate absolute path relative to current directory
-name|p
+name|path
 operator|=
 operator|new
 name|Path
@@ -498,40 +497,16 @@ argument_list|(
 literal|"user.dir"
 argument_list|)
 argument_list|,
-name|fromPath
+name|path
 argument_list|)
-expr_stmt|;
-block|}
-name|fromScheme
-operator|=
-literal|"file"
+operator|.
+name|toString
+argument_list|()
 expr_stmt|;
 block|}
 else|else
 block|{
-if|if
-condition|(
-operator|!
-name|fromPath
-operator|.
-name|startsWith
-argument_list|(
-literal|"/"
-argument_list|)
-operator|&&
-name|StringUtils
-operator|.
-name|isEmpty
-argument_list|(
-name|fromURI
-operator|.
-name|getAuthority
-argument_list|()
-argument_list|)
-condition|)
-block|{
-comment|// generate absolute path relative to current directory
-name|p
+name|path
 operator|=
 operator|new
 name|Path
@@ -549,29 +524,15 @@ literal|"user.name"
 argument_list|)
 argument_list|)
 argument_list|,
-name|fromPath
+name|path
 argument_list|)
-expr_stmt|;
-block|}
-block|}
-block|}
-name|fs
-operator|=
-name|FileSystem
 operator|.
-name|get
-argument_list|(
-name|fromURI
-argument_list|,
-name|conf
-argument_list|)
+name|toString
+argument_list|()
 expr_stmt|;
-name|String
-name|fromAuthority
-init|=
-literal|null
-decl_stmt|;
-comment|// fall back to configuration based scheme if necessary
+block|}
+block|}
+comment|// set correct scheme and authority
 if|if
 condition|(
 name|StringUtils
@@ -582,28 +543,50 @@ name|fromScheme
 argument_list|)
 condition|)
 block|{
+if|if
+condition|(
+name|isLocal
+condition|)
+block|{
+comment|// file for local
 name|fromScheme
 operator|=
-name|fs
+literal|"file"
+expr_stmt|;
+block|}
+else|else
+block|{
+comment|// use default values from fs.default.name
+name|URI
+name|defaultURI
+init|=
+name|FileSystem
+operator|.
+name|get
+argument_list|(
+name|conf
+argument_list|)
 operator|.
 name|getUri
 argument_list|()
+decl_stmt|;
+name|fromScheme
+operator|=
+name|defaultURI
 operator|.
 name|getScheme
 argument_list|()
 expr_stmt|;
 name|fromAuthority
 operator|=
-name|fs
-operator|.
-name|getUri
-argument_list|()
+name|defaultURI
 operator|.
 name|getAuthority
 argument_list|()
 expr_stmt|;
 block|}
-comment|// if using hdfs - authority must be specified. fall back using configuration if none specified.
+block|}
+comment|// if scheme is specified but not authority then use the default authority
 if|if
 condition|(
 name|fromScheme
@@ -612,38 +595,52 @@ name|equals
 argument_list|(
 literal|"hdfs"
 argument_list|)
-condition|)
-block|{
-name|fromAuthority
-operator|=
+operator|&&
 name|StringUtils
 operator|.
 name|isEmpty
 argument_list|(
-name|fromURI
-operator|.
-name|getAuthority
-argument_list|()
+name|fromAuthority
 argument_list|)
-condition|?
-name|fs
+condition|)
+block|{
+name|URI
+name|defaultURI
+init|=
+name|FileSystem
+operator|.
+name|get
+argument_list|(
+name|conf
+argument_list|)
 operator|.
 name|getUri
 argument_list|()
-operator|.
-name|getAuthority
-argument_list|()
-else|:
-name|fromURI
+decl_stmt|;
+name|fromAuthority
+operator|=
+name|defaultURI
 operator|.
 name|getAuthority
 argument_list|()
 expr_stmt|;
 block|}
-try|try
-block|{
-name|fromURI
-operator|=
+name|LOG
+operator|.
+name|debug
+argument_list|(
+name|fromScheme
+operator|+
+literal|"@"
+operator|+
+name|fromAuthority
+operator|+
+literal|"@"
+operator|+
+name|path
+argument_list|)
+expr_stmt|;
+return|return
 operator|new
 name|URI
 argument_list|(
@@ -651,33 +648,12 @@ name|fromScheme
 argument_list|,
 name|fromAuthority
 argument_list|,
-name|p
-operator|.
-name|toString
-argument_list|()
+name|path
 argument_list|,
 literal|null
 argument_list|,
 literal|null
 argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|URISyntaxException
-name|e
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-name|e
-argument_list|)
-throw|;
-block|}
-return|return
-name|fromURI
 return|;
 block|}
 specifier|private
@@ -770,6 +746,8 @@ operator|.
 name|getMsg
 argument_list|(
 name|ast
+argument_list|,
+literal|"Source file system should be \"file\" if \"local\" is specified"
 argument_list|)
 argument_list|)
 throw|;
@@ -782,7 +760,14 @@ name|srcs
 init|=
 name|matchFilesOrDir
 argument_list|(
-name|fs
+name|FileSystem
+operator|.
+name|get
+argument_list|(
+name|fromURI
+argument_list|,
+name|conf
+argument_list|)
 argument_list|,
 operator|new
 name|Path
@@ -829,7 +814,9 @@ name|getMsg
 argument_list|(
 name|ast
 argument_list|,
-literal|"No files matching path"
+literal|"No files matching path "
+operator|+
+name|fromURI
 argument_list|)
 argument_list|)
 throw|;
@@ -884,26 +871,6 @@ name|e
 parameter_list|)
 block|{
 comment|// Has to use full name to make sure it does not conflict with org.apache.commons.lang.StringUtils
-name|LOG
-operator|.
-name|error
-argument_list|(
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|util
-operator|.
-name|StringUtils
-operator|.
-name|stringifyException
-argument_list|(
-name|e
-argument_list|)
-argument_list|)
-expr_stmt|;
 throw|throw
 operator|new
 name|SemanticException
@@ -916,6 +883,8 @@ name|getMsg
 argument_list|(
 name|ast
 argument_list|)
+argument_list|,
+name|e
 argument_list|)
 throw|;
 block|}
@@ -961,10 +930,9 @@ argument_list|)
 operator|)
 condition|)
 block|{
-name|LOG
-operator|.
-name|error
-argument_list|(
+name|String
+name|reason
+init|=
 literal|"Move from: "
 operator|+
 name|fromURI
@@ -979,9 +947,12 @@ operator|.
 name|toString
 argument_list|()
 operator|+
-literal|" is not valid"
-argument_list|)
-expr_stmt|;
+literal|" is not valid. "
+operator|+
+literal|"Please check that values for params \"default.fs.name\" and "
+operator|+
+literal|"\"hive.metastore.warehouse.dir\" do not conflict."
+decl_stmt|;
 throw|throw
 operator|new
 name|SemanticException
@@ -994,7 +965,7 @@ name|getMsg
 argument_list|(
 name|ast
 argument_list|,
-literal|"Cannot load data across filesystems, use load data local"
+name|reason
 argument_list|)
 argument_list|)
 throw|;
@@ -1150,12 +1121,14 @@ operator|.
 name|getMessage
 argument_list|()
 argument_list|)
+argument_list|,
+name|e
 argument_list|)
 throw|;
 block|}
 catch|catch
 parameter_list|(
-name|RuntimeException
+name|URISyntaxException
 name|e
 parameter_list|)
 block|{
@@ -1176,6 +1149,8 @@ operator|.
 name|getMessage
 argument_list|()
 argument_list|)
+argument_list|,
+name|e
 argument_list|)
 throw|;
 block|}
